# quickfix.ai

./: LICENCE  Makefile  README.md
backend/: .gitignore  Makefile  README.md  pyproject.toml
backend/src/: api.py  gpt.py
backend/storage/: README.md
chrome-extension/: README.md  manifest.json
chrome-extension/popup/: popup.css  popup.html  popup.js
chrome-extension/scripts/: content.js
vscode-extension/: .env.example  CHANGELOG.md  README.md  package.json
vscode-extension/src/: env.ts  extension.ts
